# The-Defiant

./: LICENSE  Makefile  README.md  package-lock.json  pyproject.toml
backend/: App.py
defiant/: App.py  main.py
defiant/database/: db.py
defiant/models/: PostModel.py
defiant/server/: App.py  database.py
defiant/server/models/: PostModel.py  __init__.py
docker/: Dockerfile
tests/: test_app.py
views/: admin.html
