[tool.poetry]
name = "the-defiant"
version = "0.1.0"
description = ""
authors = ["Szymon Szyszkowski <szymonszyszkowski@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pylint = "^2.14.1"
black = "^22.3.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"
mypy = "^0.961"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
