[tool.poetry]
name = "defiant_backend"
version = "0.1.0"
description = ""
authors = ["Szymon Szyszkowski <szymonszyszkowski@gmail.com>"]
packages = [
    { include = "defiant" }
]
[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.6"
fastapi = "^0.78.0"
redis = "^4.3.3"
motor = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
